--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "renderjson": "^1.4.0"
   },
   "browserslist": [
     ">0.2%",
