--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@vkontakte/vk-bridge": "^2.4.1",
     "@vkontakte/vk-connect": "^1.8.7",
     "@vkontakte/vkjs": "^0.21.0",
-    "@vkontakte/vkui": "^4.24.0",
+    "@vkontakte/vkui": "4.24.0",
     "babel-eslint": "^9.0.0",
     "bugy": "^1.0.5",
     "chalk": "^2.4.2",
